# mlir-option-dialect

./: Canonicalization.cpp  Cargo.toml  Dialect.cpp  Dialect.td  Lowering.cpp  Lowering.hpp  Makefile  Ops.cpp  Ops.hpp  Ops.td  Option.cpp  Option.hpp  OptionOps.cpp  OptionTypes.cpp  OptionTypes.hpp  Plugin.cpp  README.md  Types.cpp  Types.td  build.rs  c_api.cpp  option_c.cpp
cpp/: Canonicalization.cpp  ConvertToSum.cpp  ConvertToSum.hpp  Lowering.hpp  Makefile  Option.cpp  Option.hpp  Option.td  OptionOps.cpp  OptionOps.hpp  OptionOps.td  OptionTypes.cpp  OptionTypes.hpp  OptionTypes.td  Plugin.cpp  c_api.h
cpp/tests/: and_then.mlir  and_then_canonicalization.mlir  and_then_to_llvm.mlir  convert_to_sum.mlir  invalid.mlir  lit.cfg.py  some.mlir
src/: lib.rs
tests/: and_then.mlir  and_then_canonicalization.mlir  and_then_fold.mlir  and_then_to_llvm.mlir  invalid.mlir  is_some.mlir  is_some_fold.mlir  lit.cfg.py  none.mlir  some.mlir  unwrap_or.mlir  unwrap_or_some_canonicalization.mlir
